  ###################################
##### Changed in Scannomatic 0.996 #####
   ###################################

  ###################################
##### Changed in Scannomatic 0.995 #####
   ###################################

  ###################################
##### Changed in Scannomatic 0.994 #####
   ###################################

*** Fixed buggs appearing when freash install is run

*** Auto-update on versions works as well as on dev.

  ###################################
##### Changed in Scannomatic 0.993 #####
   ###################################

*** Auto-update works

*** Reset instances counter possible

*** Analysis writes the version of scan-o-matic to xml

*** Nice settings gui that is integrated with the actual config settings of the program

*** Minor adjustment to experiment pinning matrix dropdowns

*** Running project analysis now reports if anything bad happened.

*** Warning message if serveral instances of the program is running in parallell.

*** runtime.log gets all logging messages and is overwritten at each start-up

*** Changed the DMS of Scan-o-Matic to have better naming of where things
    should be reported. Dialogs also take appropriate icons.

*** Implemented custom uncaught exception hook

*** Renamed Aquire One... to 'Drop Test'

*** Added Pigmentation Scan feature

*** Analysis corrects grids according to its knowledge of how it should be
    if it gets odd results.

*** Added manual grid to analysis / GUI and command line

*** Implemented GUI for regridding

*** Migrated number of scanners to main.config

*** Implemented a Force Unclaim Scanner possibility

*** Implemented an abort running analysis

*** Implemented nicer program terminate to catch all ongoing processes.

*** Moved the gridding out of the analysis-path so grids can be set manually

*** Analysis script writes logging-info to the analysis.run - file of designated
    output directory
