@@ -2,6 +2,9 @@
 ##### Changed in Scannomatic 0.996 #####
    ###################################
 
+*** Fixted so analysis project actually takes pinning string override directly
+    when toggled and not only when a pinning setting is changed
+
   ###################################
 ##### Changed in Scannomatic 0.995 #####
    ###################################
